# Stock_Analysis_Agentic_AI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  startup.bat  stocks-names.txt  stocks.txt  usecase.txt  vignesh-stocks-short.txt  vignesh-stocks.txt
.claude/: settings.local.json
scripts/: run_research_natco.py
src/agents/: bedrock_call.py  evidence.py  fundamental_agent.py  investigator.py  lead_researcher.py  macro_evidence_agent.py  market_data_agent.py  news_agent.py  orchestrator.py  self_critic.py  synthesizer.py  technical_agent.py  thread_registry.py  web_scraping_agent.py
src/config/: analysis_profiles.py  aws_client.py  exchanges.py  news_sources.py  news_sources.yaml  prompts.py  search_queries.py  settings.py  symbol_resolver.py
src/db/: macro_store.py  report_store.py
src/reports/: diff.py  render.py
src/tools/: batch_tools.py  chartink_tools.py  fundamental_tools.py  macro_tools.py  market_data_tools.py  news_tools.py  scoring_tools.py  scraping_tools.py  screener_tools.py  technical_analysis_tools.py
src/ui/: Home.py  app.py  pdf_export.py
src/ui/pages/: 1_Analysis.py  2_History.py  3_Settings.py
src/utils/: cache.py
tests/: conftest.py  test_analyst_consensus.py  test_batch_tools.py  test_cache.py  test_chartink_tools.py  test_evidence.py  test_exchanges.py  test_fundamental_tools.py  test_investigator_parse.py  test_lead_researcher_macro.py  test_macro_evidence_agent.py  test_macro_store.py  test_macro_tools.py  test_market_data_tools.py  test_news_tools.py  test_orchestrator.py  test_pdf_export.py  test_render.py  test_report_diff.py  test_report_store.py  test_report_store_macro.py  test_scoring_tools.py  test_scraping_tools.py  test_screener_tools.py  test_search_queries.py  test_settings.py  test_settings_new_fields.py  test_symbol_resolver.py  test_synthesizer_fallback.py  test_technical_analysis_tools.py
