# Stock Analysis AI Agent - Multi-Exchange Stock Analysis Platform
# Copyright (C) 2026 B.Vignesh Kumar (Bravetux) <ic19939@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#
# Author: B.Vignesh Kumar aka Bravetux
# Email:  ic19939@gmail.com
# Developed: 10th April 2026

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-analysis-agent"
version = "0.1.0"
description = "Stock Analysis AI Agent"
requires-python = ">=3.12"
dependencies = [
    # Strands Agent Framework
    "strands-agents>=0.1",
    "strands-agents-tools>=0.1",
    # UI
    "streamlit>=1.40",
    # AWS
    "boto3>=1.35",
    # Config
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Stock Data
    "yfinance>=0.2.40",
    "nsetools>=1.0.11",
    "bsedata>=0.6.0",
    # Technical Analysis
    "pandas-ta>=0.3.14b",
    "pandas>=2.0",
    "numpy>=1.24",
    # News
    "GoogleNews>=1.6.12",
    "newspaper3k>=0.2.8",
    "pytrends>=4.9",
    # Web Scraping
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "httpx>=0.27",
    "lxml>=5.0",
    # Utilities
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    # PDF Export & Reports
    "markdown2>=2.4",
    "xhtml2pdf>=0.2.11",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "responses>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
